tests/paczka1/small_fuzzy/58681598.err
Error in line 4: mgarWRZ A119 -13,8
Error in line 6: jFj6qt6WO S175 9,0
Error in line 14: jFj6qt6WO S377 47,8
